WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269102
Fix http/tests/pdf/linearized-pdf-in-iframe to actually test incremental PDF loading
https://bugs.webkit.org/show_bug.cgi?id=269102
Summary
Fix http/tests/pdf/linearized-pdf-in-iframe to actually test incremental PDF ...
Simon Fraser (smfr)
Reported
2024-02-09 15:00:18 PST
This test wasn't triggering the incremental PDF code path.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-09 15:01:09 PST
<
rdar://problem/122672100
>
Simon Fraser (smfr)
Comment 2
2024-02-09 15:06:59 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24178
EWS
Comment 3
2024-02-09 22:17:33 PST
Committed
274412@main
(44ecdd4e8ee1): <
https://commits.webkit.org/274412@main
> Reviewed commits have been landed. Closing PR #24178 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug